--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
         <script src="http://use.fontawesome.com/d1341f9b7a.js"></script>
         <link rel="stylesheet" href="style.css">
         <title>Nguyễn Đức Toàn</title>
-
-
-
-
     </head>
-
     <body>
 <div class="box">
     <img src="Siesta.jpg" alt="" class="box-img">
@@ -19,12 +14,9 @@
     <h5>Top 1 Liên Quân, Thần Đồng Gánh Team</h5>
     <p></p>
 <ul>
-    <li><a href="https://www.facebook.com/profile.php?id=100038764072973" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+    <li><a href="https://www.facebook.com/profile.php?id=100038764072973" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
     <li><a href="https://www.instagram.com/toanowo/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-
 </ul>
-</div>
-    
-        
+</div>   
     </body>
 </html>
