--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h5>Top 1 Liên Quân, Thần Đồng Gánh Team</h5>
     <p></p>
 <ul>
-    <li><a href="https://www.facebook.com/profile.php?id=100038764072973" target="_blank"></a></li>
-    <li><a href="https://www.instagram.com/toanowo/"></a></li>
+    <li><a href="https://www.facebook.com/profile.php?id=100038764072973"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+    <li><a href="https://www.instagram.com/toanowo/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 </ul>
 </div>   
     </body>
